--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,10 @@
         "/consoleloggerparameters:NoSummary"
       ],
       "type": "process",
-      "problemMatcher": "$msCompile"
+      "problemMatcher": "$msCompile",
+      "options": {
+        "cwd": "${workspaceFolder}/src"
+      }
     },
     {
       "label": "build (functions)",
@@ -26,7 +29,10 @@
         "kind": "build",
         "isDefault": true
       },
-      "problemMatcher": "$msCompile"
+      "problemMatcher": "$msCompile",
+      "options": {
+        "cwd": "${workspaceFolder}/src"
+      }
     },
     {
       "label": "clean release (functions)",
@@ -39,7 +45,10 @@
         "/consoleloggerparameters:NoSummary"
       ],
       "type": "process",
-      "problemMatcher": "$msCompile"
+      "problemMatcher": "$msCompile",
+      "options": {
+        "cwd": "${workspaceFolder}/src"
+      }
     },
     {
       "label": "publish (functions)",
@@ -53,13 +62,17 @@
       ],
       "type": "process",
       "dependsOn": "clean release (functions)",
-      "problemMatcher": "$msCompile"
+      "problemMatcher": "$msCompile",
+      "options": {
+        "cwd": "${workspaceFolder}/src"
+      }
     },
     {
+      "label": "func: host start",
       "type": "func",
       "dependsOn": "build (functions)",
       "options": {
-        "cwd": "${workspaceFolder}/bin/Debug/net8.0"
+        "cwd": "${workspaceFolder}/src/bin/Debug/net8.0"
       },
       "command": "host start",
       "isBackground": true,
